# eden

./: .gitignore  Cargo.toml  README.md  build.rs
config/: config.json
src/: main.rs  text.txt
ui/: appwindow.slint
