[package]
name = "Seth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
colored = "2.1.0"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
clap = "4.5.16"

[build-dependencies]
slint-build = "1.7.1"
